opam-version: "2.0"
maintainer: "sudo-woodo3@protonmail.com"
authors: ["Alessandro Cheli"]
homepage: "https://github.com/0x0f0f0f/gobba"
bug-reports: "https://github.com/0x0f0f0f/gobba/issues"
dev-repo: "git+https://github.com/0x0f0f0f/gobba.git"
license: "MIT"
synopsis: "A simple, didactical, purely functional programming language"
description: "A simple, didactical, purely functional programming language written for the programming 2 course at the University of Pisa, extended with a simple parser made with Menhir and ocamllex"
doc: "https://0x0f0f0f.github.io/gobba"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["sh" "-c" "GOBBA_EXAMPLES=$(realpath ./examples/) dune runtest -p %{name}% -j %{jobs}%"] {with-test}
]

depends: [
    "dune" {>= "2.0"}
    "ocaml" {>= "4.05.0"}
    "ANSITerminal"
    "ocamline" {>= "1.1"}
    "linenoise" {>= "1.3.0"}
    "menhir"
    "ppx_deriving"
    "cmdliner"
    "alcotest" {with-test & >= "0.8.5"}
    "bisect_ppx" {with-test >= "1.4.1"}
]
