(library
 (name minicaml)
 (public_name minicaml)
 (libraries ANSITerminal)
; (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord bisect_ppx)))
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))

(copy_files primitives/*.ml)
(ocamllex lexer)
(menhir (modules parser))