(library
 (name minicaml)
 (public_name minicaml)
 (libraries ANSITerminal ocamline menhirLib)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord bisect_ppx -conditional)))

(copy_files primitives/*.ml)
(copy_files parser/*)
(ocamllex lexer)
(menhir (modules parser) (flags ("--table")))