(library
 (name gobba)
 (public_name gobba)
 (libraries ANSITerminal ocamline menhirLib) ;owl)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord bisect_ppx -conditional)))

(copy_files primitives/*.ml)
(copy_files parser/*)
(ocamllex lexer)
(menhir (modules parser) (flags ("--table")))